--- a/gh-pages/index.html
+++ b/gh-pages/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>A-Frame Orbit Controls Component</title>
+    <title>A-Frame No-Click Look Controls Component</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/github-fork-ribbon-css/0.1.1/gh-fork-ribbon.min.css"/>
     <style>
       html {
